# chrome-remote-devtools

./: .editorconfig  .gitignore  .gitmodules  .mise.toml  .oxfmtrc.json  .prettierignore  AGENTS.MD  CONTRIBUTING.md  CONTRIBUTING_KO.md  Cargo.toml  LICENSE  README.md  README_KO.md  STATUS.md  bunfig.toml  happydom.ts  oxlint.json  package.json  playwright.config.ts
.github/workflows/: docs.yml  lint-rust.yml  lint-ts.yml  publish-npm.yml  test-client.yml  test-inspector-rust.yml  test-inspector-ts.yml  test-integration.yml  test-maestro-android.yml  test-maestro-ios.yml  test-react-native-inspector.yml  test-server.yml
.maestro/: default.yml
crates/server/: Cargo.toml  README.md
crates/server/src/: config.rs  http_routes.rs  lib.rs  logging.rs  main.rs  server.rs  socket_server.rs
crates/server/src/react_native/: inspector_connection.rs  inspector_handler.rs  mod.rs
crates/server/src/reactotron_server/: bridge.rs  cdp_bridge.rs  handler.rs  mod.rs  server.rs  types.rs
crates/server/src/reactotron_server/cdp_bridge/: console.rs  mod.rs  network.rs  normalize.rs
crates/server/src/socket_server/: client_handler.rs  devtools_handler.rs  message.rs  message_processor.rs  mod.rs  react_native_handler.rs  types.rs
crates/server/tests/: integration_http.rs  integration_websocket.rs
crates/server/tests/common/: mod.rs
devtools/: .gclient
devtools/bundled/front_end/: devtools_resources.grd
document/: package.json  rspress.config.ts
document/components/: DevToolsPlayground.tsx
document/docs/components/: ClientInit.tsx
document/docs/en/: _nav.json  contributing.md  index.md  (+1 more)
document/scripts/: fix-devtools-files.ts
examples/basic/: index.html  package.json
examples/iframe/: README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
examples/popup/: index.html  package.json
examples/react-native/: .mise.toml  README.md  app.json  index.js  metro.config.js  package.json  react-native.config.js
scripts/: build-redux-extension.mjs  build.bat  build.sh  copy-devtools-bundled.ts  coverage-comment-rust.ts  coverage-comment.ts  dev.ts  init.bat  init.sh  prepare-publish.ts  start-server-with-client.ts
tests/e2e/: iframe-example.test.ts  inspector-localstorage-isolation.test.ts  user-scenarios.test.ts
tests/integration/: cdp-console.test.ts  cdp-dom.test.ts  cdp-network.test.ts  cdp-page.test.ts  cdp-runtime.test.ts  cdp-storage.test.ts  full-flow.test.ts  websocket.test.ts
(+1485 files in other folders)
