[workspace]
members = [
    "crates/server",
    "packages/inspector/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ohah <bookyoon173@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# WebSocket & HTTP
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
axum = { version = "0.7", features = ["ws", "http1", "http2", "macros"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# SSL/TLS
rustls = "0.23.36"
rustls-pemfile = "2.1"
tokio-rustls = "0.26.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Tauri (inspector 전용)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-build = { version = "2", features = [] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
opt-level = "z"
panic = "abort"
